Fix: center align items in #relatedProduct element

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ Video
     width: 80vw;
     display: flex;
     flex-direction: row;
+    align-items: center;
     background-color: #3b5998;
     margin-top: 0;
     padding: 10px;
